# text-to-sql-llm-finetuning

./: .dockerignore  0_playground.py  1_training.ipynb  2.1_llm_eval_output.txt  2.2_parsed_output.json  2_evaluation.ipynb  Dockerfile  README.md  app.py  pyproject.toml
