[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.2.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "trl>=0.17.0",
    "huggingface-hub>=0.32.0",
]
