[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlparse>=0.5.3",
    "streamlit>=1.45.1",
    "transformers>=4.40.2,<5.0.0",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "trl>=0.17.0",
    "huggingface-hub>=0.32.0",
    "openai>=1.82.0",
    "azure-core>=1.34.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",

]